main page change

--- a/data/authors/mainpage.mdx
+++ b/data/authors/mainpage.mdx
@@ -9,7 +9,9 @@ linkedin: https://www.linkedin.com
 github: https://github.com
 ---
 # About Me
-贾涵泽 is my Chinese name. My research interests are Data Visualization and Human-computer interaction.Currently, I'm a professional doctoral student in computer science, [Zhejiang University](https://www.zju.edu.cn/). 
+Welcome to my personal page 😃!
+
+I am Hanze Jia (贾涵泽 in Chinese), currently a professional doctoral student in computer science at [Zhejiang University](https://www.zju.edu.cn/).I am fortunate to be supervised by [Tang, Tan](https://tantang.org/) and Prof. [Yingcai Wu](http://www.ycwu.org/). I am interested in data visualization, human-computer interaction, and computer graphics. I am also a member of the [Interactive Data Group](https://zjuidg.org/).
 
 ### Research Interests
 - Data Visualization
